# Advent-of-code-2025

./: .gitignore  Advent-of-code.cabal  LICENSE
app/: Answers.hs  Main.hs
app/Day1/: Dial.hs
app/Day2/: IdRanges.hs
app/Day3/: BatteryBank.hs
app/Day4/: PaperArea.hs  PaperRolls.hs
app/Day5/: Sets.hs
app/Day6/: ExpA.hs
app/Day7/: Manifold.hs  input.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
