cabal-version:      3.0
name:               Advent-of-code
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             marcos-ordo
maintainer:         ordonezmarcos935@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Advent-of-code
    import:           warnings
    main-is:          Main.hs
    other-modules:    Answers
                      Day1.Dial
                      Day2.IdRanges
                      Day3.BatteryBank
                      Day4.PaperRolls
                      Day4.PaperArea
                      Day5.Sets
                      Day6.ExpA
    -- other-extensions: 
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
